--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
+
+@layer base {
+    body{
+        @apply bg-dark-2 font-primary;
+    }
+}
